--- a/.gitignore
+++ b/.gitignore
@@ -44,7 +44,7 @@ target/
 
 # Intellij IDEA (see https://intellij-support.jetbrains.com/entries/23393067)
 *.iml
-#.idea
+.idea
 #.idea/workspace.xml
 #.idea/tasks.xml
 #.idea/datasources.xml
