--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.isseiaoki:simplecropview:1.0.13'
+    compile 'com.android.support:cardview-v7:23.1.1'
     compile project(':libraries:tess-two')
 }
